--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,8 @@
-packages/subgraph/subgraph.yaml
-packages/subgraph/generated
-packages/hardhat/*.txt
-**/aws.json
-
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-**/node_modules
-packages/hardhat/artifacts
-packages/hardhat/typechain
-packages/hardhat/deployments/localhost
-packages/react-app/src/contracts
-packages/hardhat/cache
-packages/hardhat/coverage/
-packages/hardhat/coverage.json
-
-docker/**/data
-
-packages/subgraph/config/config.json
-
-packages/react-app/public
+artifacts
+typechain
+deployments/localhost
+cache
 
 # dependencies
 /node_modules
@@ -26,6 +11,7 @@ packages/react-app/public
 
 # testing
 coverage
+coverage.json
 
 # production
 build
