--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,6 @@
 {
-  "solidity.compileUsingRemoteVersion": "latest",
   "solidity.packageDefaultDependenciesContractsDirectory": "",
-  "solidity.enabledAsYouTypeCompilationErrorCheck": true,
-  "solidity.validationDelay": 1500,
-  "solidity.packageDefaultDependenciesDirectory": "packages/hardhat/node_modules",
+  "solidity.packageDefaultDependenciesDirectory": "node_modules",
   "mochaExplorer.env": {
     "HARDHAT_CONFIG": "hardhat.config.ts",
     "HARDHAT_COMPILE": "true"
