--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@tenderly/hardhat-tenderly": "^1.0.6",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.22",
@@ -15,7 +14,6 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "hardhat-abi-exporter": "^2.0.8",
     "hardhat-deploy": "^0.7.0-beta.44",
     "hardhat-gas-reporter": "^1.0.4",
     "mocha": "^8.3.2",
@@ -31,12 +29,12 @@
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts": "^3.2.0",
     "@typechain/ethers-v5": "^5.0.0",
+    "@typechain/hardhat": "^1.0.1",
     "chai": "^4.2.0",
     "chalk": "^4.1.0",
     "ethereum-waffle": "^3.1.1",
     "ethers": "^5.0.17",
     "hardhat": "^2.0.6",
-    "hardhat-typechain": "^0.3.4",
     "node-watch": "^0.7.0",
     "qrcode-terminal": "^0.12.0",
     "ramda": "^0.27.1",
@@ -45,8 +43,7 @@
   "scripts": {
     "chain": "hardhat node",
     "fork": "hardhat node --fork https://mainnet.infura.io/v3/460f40a260564ac4a4f4b3fffb032dad",
-    "test": "hardhat test --network hardhat",
-    "test:gas": "REPORT_GAS=true hardhat test --network localhost",
+    "test": "hardhat test test/MerkleDistributor.test.ts",
     "compile": "hardhat compile",
     "lint": "prettier --list-different 'contracts/**/*.sol'",
     "coverage": "hardhat coverage --network coverage --temp artifacts",
